force-app/main/default/objects/shareconnect__Package_Log__c/shareconnect__Package_Log__c.object-meta.xml
<CustomObject>
    <label>Package Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Package Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>