force-app/main/default/objects/shareconnect__Package_Log__c/fields/shareconnect__Action__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File_Linked</fullName>
                <label>File Linked</label>
            </value>
            <value>
                <fullName>File_Uploaded</fullName>
                <label>File Uploaded</label>
            </value>
            <value>
                <fullName>Folder_Created</fullName>
                <label>Folder Created</label>
            </value>
            <value>
                <fullName>Folder_Linked</fullName>
                <label>Folder Linked</label>
            </value>
            <value>
                <fullName>Email_Sent</fullName>
                <label>Email Sent</label>
            </value>
            <value>
                <fullName>File_Shared</fullName>
                <label>File Shared</label>
            </value>
            <value>
                <fullName>Folder_Shared</fullName>
                <label>Folder Shared</label>
            </value>
            <value>
                <fullName>Folder_Renamed</fullName>
                <label>Folder Renamed</label>
            </value>
            <value>
                <fullName>File_Renamed</fullName>
                <label>File Renamed</label>
            </value>
            <value>
                <fullName>File_Viewed</fullName>
                <label>File Viewed</label>
            </value>
            <value>
                <fullName>Folder_Viewed</fullName>
                <label>Folder Viewed</label>
            </value>
            <value>
                <fullName>Folder_URL_Copied</fullName>
                <label>Folder URL Copied</label>
            </value>
            <value>
                <fullName>File_URL_Copied</fullName>
                <label>File URL Copied</label>
            </value>
            <value>
                <fullName>File_Unlinked</fullName>
                <label>File Unlinked</label>
            </value>
            <value>
                <fullName>Folder_Unlinked</fullName>
                <label>Folder Unlinked</label>
            </value>
            <value>
                <fullName>File_Downloaded</fullName>
                <label>File Downloaded</label>
            </value>
            <value>
                <fullName>File_Deleted</fullName>
                <label>File Deleted</label>
            </value>
            <value>
                <fullName>Folder_Deleted</fullName>
                <label>Folder Deleted</label>
            </value>
            <value>
                <fullName>Automate_SharePoint</fullName>
                <label>Automate SharePoint</label>
            </value>
            <value>
                <fullName>File_Saved</fullName>
                <label>File Saved</label>
            </value>
            <value>
                <fullName>Set_Default_Record_Folder</fullName>
                <label>Set Default Record Folder</label>
            </value>
            <value>
                <fullName>Unset_Default_Record_Folder</fullName>
                <label>Unset Default Record Folder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>