force-app/main/default/objects/shareconnect__Package_Log__c/fields/shareconnect__Detail__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Detail__c</fullName>
    <label>Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>