force-app/main/default/objects/shareconnect__Package_Log__c/fields/shareconnect__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>