force-app/main/default/objects/shareconnect__Package_Log__c/fields/shareconnect__Method__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Method__c</fullName>
    <label>Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>