force-app/main/default/objects/shareconnect__Package_Log__c/fields/shareconnect__Response_Body__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Response_Body__c</fullName>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>