force-app/main/default/objects/shareconnect__Package_Log__c/fields/shareconnect__Status_Code__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Status_Code__c</fullName>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>