force-app/main/default/objects/shareconnect__Package_Log__c/fields/shareconnect__Type__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>