force-app/main/default/objects/shareconnect__Package_Log__c/listViews/shareconnect__All.listView-meta.xml
<ListView>
    <fullName>shareconnect__All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>shareconnect__Type__c</columns>
    <columns>shareconnect__Detail__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>