force-app/main/default/objects/shareconnect__Package_Log__c/listViews/shareconnect__Error_Logs.listView-meta.xml
<ListView>
    <fullName>shareconnect__Error_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>shareconnect__Detail__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>shareconnect__Type__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Error Logs</label>
</ListView>